popular collection section created

--- a/index.html
+++ b/index.html
@@ -25,6 +25,135 @@
         </nav>
     </header>
 
+    <!-- main part of the website starts here.. -->
+
+    <main>
+        <section class="top-banner">
+            <div class="half-width">
+                <h1>Start Your Journey as Influencer</h1>
+                <p>
+                    Whether youre a solopreneur or part of a team, youre already fighting tooth and nail to build your
+                    own audience. Thats the whole reason for existing!build your own audience. Thats the whole reason
+                    for existing!
+
+                </p>
+                <a href="" class="link-button">Buy Now&nbsp;&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="half-width">
+                <img src="./images/studio-setup.jpg" alt="top banner image">
+            </div>
+        </section>
+        <section class="popular-collection">
+            <h2>Popular Collection</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/tripod.png" alt="tripod">
+                    <h3>Flex Tripod</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$50.48</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="./images/airpod.png" alt="airpod">
+                    <h3>Airbuds</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$50.48</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="./images/mic.png" alt="micropone">
+                    <h3>Micropone</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$120.25</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="./images/drone.png" alt="drone">
+                    <h3>Flex Tripod</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$820.40</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="./images/lights.png" alt="light set up">
+                    <h3>Flex Tripod</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$1200</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="./images/setup.png" alt="photoshoot setup">
+                    <h3>Flex Tripod</h3>
+                    <h3 style="font-size: 20px;font-weight: 300;">$980.25</h3>
+
+                    <span class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </span> &nbsp;
+                    <span class="number">4.99</span>
+                    <p>Worldwide shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- main part of the website ends here..  -->
+
 </body>
 
 </html>
