newlatter section created

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+
+    <!-- header section starts  -->
+
     <header>
         <nav>
             <span class="brand-name">
@@ -25,7 +28,10 @@
         </nav>
     </header>
 
-    <!-- main part of the website starts here.. -->
+    <!-- header section ends  -->
+
+
+    <!-- main section starts -->
 
     <main>
         <section class="top-banner">
@@ -149,10 +155,35 @@
                     <p>Buyers protection possible</p>
                 </div>
             </div>
+            <a href="" class="link-button see-more">See more&nbsp;&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
+        </section>
+        <section class="newslatter">
+            <h1>Get offers via email</h1>
+            <h2>Newslatter</h2>
+            <form action="">
+                <div class="half-width">
+                    <img src="./images/envelope.jpg" alt="">
+                </div>
+                <div class="half-width contact">
+                    <div>
+                        <label for="name">Name : </label>
+                        <input type="text" name="name" id="name" placeholder="Name">
+                    </div>
+                    <div>
+                        <label for="email">Email : </label>
+                        <input type="email" name="email" id="email" placeholder="Email Address">
+                    </div>
+                    <div>
+                        <a href="" class="link-button">Subscribe</a>
+                    </div>
+                </div>
+            </form>
         </section>
     </main>
 
-    <!-- main part of the website ends here..  -->
+    <!-- main section ends -->
+
+
 
 </body>
 
