commit for proper documentation.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <!-- main section starts -->
 
+    <!-- top banner section starts  -->
+
     <main>
         <section class="top-banner">
             <div class="half-width">
@@ -49,6 +51,11 @@
                 <img src="./images/studio-setup.jpg" alt="top banner image">
             </div>
         </section>
+
+        <!-- top banner section ends  -->
+
+        <!-- Popular Collection section starts  -->
+
         <section class="popular-collection">
             <h2>Popular Collection</h2>
             <div class="card-container">
@@ -157,6 +164,11 @@
             </div>
             <a href="" class="link-button see-more">See more&nbsp;&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
         </section>
+
+        <!-- Popular Collection section ends  -->
+
+        <!-- newslatter section starts  -->
+
         <section class="newslatter">
             <h1>Get offers via email</h1>
             <h2>Newslatter</h2>
@@ -179,11 +191,16 @@
                 </div>
             </form>
         </section>
+
+        <!-- newslatter section ends  -->
+
     </main>
 
     <!-- main section ends -->
 
+    <footer>
 
+    </footer>
 
 </body>
 
