--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <input type="text" name="name" id="name" placeholder="Name">
                     </div>
                     <div>
-                        <label for="email">Email : </label>
+                        <label for="email">Email :&nbsp;</label>
                         <input type="email" name="email" id="email" placeholder="Email Address">
                     </div>
                     <div>
@@ -199,7 +199,27 @@
     <!-- main section ends -->
 
     <footer>
+        <h2>Influencer Products</h2>
+        <p>Copyright &copy; influencer products</p>
+        <p>All rights reseverd</p>
+        <div>
+            <span class="social-icon">
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </span>
+            <span class="social-icon">
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </span>
+            <span class="social-icon">
+                <a href="">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </span>
 
+        </div>
     </footer>
 
 </body>
