--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
         <p>All rights reseverd</p>
         <div>
             <span class="social-icon">
-                <a href="">
+                <a href="https://www.instagram.com/">
                     <i class="fab fa-instagram"></i>
                 </a>
             </span>
             <span class="social-icon">
-                <a href="">
+                <a href="https://twitter.com/">
                     <i class="fab fa-twitter"></i>
                 </a>
             </span>
             <span class="social-icon">
-                <a href="">
+                <a href="https://www.youtube.com/">
                     <i class="fab fa-youtube"></i>
                 </a>
             </span>
