mobile friendly feature added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main>
         <section class="top-banner">
-            <div class="half-width">
+            <div class="half-width info-section">
                 <h1>Start Your Journey as Influencer</h1>
                 <p>
                     Whether youre a solopreneur or part of a team, youre already fighting tooth and nail to build your
@@ -47,7 +47,7 @@
                 </p>
                 <a href="" class="link-button">Buy Now&nbsp;&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
             </div>
-            <div class="half-width">
+            <div class="half-width image-section">
                 <img src="./images/studio-setup.jpg" alt="top banner image">
             </div>
         </section>
@@ -218,7 +218,6 @@
                     <i class="fab fa-youtube"></i>
                 </a>
             </span>
-
         </div>
     </footer>
 
